// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task lz:errors:decode should print CustomError details 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error UnsupportedEid()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0x3a81d6fc 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error AlreadyRegistered()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print CustomError details if the error is 0x81da67ee 1`] = `
[
  {
    "Error": "CustomError: Contract reverted with custom error. Error InvalidOptionalDVNThreshold()",
    "Type": "Custom error",
  },
]
`;

exports[`task lz:errors:decode should print PanicError details 1`] = `
[
  {
    "Error": "PanicError: Contract panicked (assert() has been called). Error code 6",
    "Type": "Panic error",
  },
]
`;

exports[`task lz:errors:decode should print RevertError details 1`] = `
[
  {
    "Error": "RevertError: Contract reverted. Error reason 'my bad'",
    "Type": "Revert error",
  },
]
`;
